@@ -222,38 +222,33 @@ void EvalIterator::copyOuterVariables(
 
   dynamic_context* outerDctx = evalDctx->getParent();
 
-  std::vector<var_expr_t> globalVars;
-  outerSctx->get_parent()->getVariables(globalVars, theForDebugger, true);
-  
-  FOR_EACH(std::vector<var_expr_t>, ite, globalVars)
+  const std::vector<dynamic_context::VarValue>& outerVars = outerDctx->get_variables();
+  csize numOuterVars = outerVars.size();
+
+  for (csize i = 0; i < numOuterVars; ++i)
   {
-    var_expr* globalVar = (*ite).getp();
+    const dynamic_context::VarValue& outerVar = outerVars[i];
 
-    ulong globalVarId = globalVar->get_unique_id();
+    if (!outerVar.isSet())
+      continue;
 
-    if (globalVarId > maxOuterVarId)
-      maxOuterVarId = globalVarId;
+    ulong outerVarId = static_cast<ulong>(i);
+
+    if (outerVarId > maxOuterVarId)
+      maxOuterVarId = outerVarId;
 
     store::Item_t itemValue;
     store::TempSeq_t seqValue;
 
-    if (!outerDctx->is_set_variable(globalVarId))
-      continue;
-
-    outerDctx->get_variable(globalVarId,
-                            globalVar->get_name(),
-                            loc,
-                            itemValue,
-                            seqValue);
-
-    if (itemValue != NULL)
+    if (outerVar.hasItemValue())
     {
-      evalDctx->add_variable(globalVarId, itemValue);
+      store::Item_t value = outerVar.theValue.item;
+      evalDctx->add_variable(outerVarId, value);
     }
     else
     {
-      store::Iterator_t iteValue = seqValue->getIterator();
-      evalDctx->add_variable(globalVarId, iteValue);
+      store::Iterator_t iteValue = outerVar.theValue.temp_seq->getIterator();
+      evalDctx->add_variable(outerVarId, iteValue);
     }
   }
 
