@@ -1,0 +1,3 @@
+module namespace foo2 = "http://foo2.com/";
+
+declare variable $foo2:var := 20;
